Use non-git URL (no auth needed)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "docker-stellar-core"]
 	path = docker-stellar-core
-	url = git@github.com:bloom-solutions/docker-stellar-core.git
+	url = https://github.com/bloom-solutions/docker-stellar-core.git
 	branch = bloom_changes
