Build prod image from cache

--- a/cloudbuild/prod.yml
+++ b/cloudbuild/prod.yml
@@ -5,8 +5,11 @@ steps:
       - "update"
       - "--init"
   - name: 'gcr.io/cloud-builders/docker'
+    args: ["pull", "us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"]
+  - name: 'gcr.io/cloud-builders/docker'
     args:
       - "build"
+      - "--cache-from=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
       - "--file=docker-stellar-core/Dockerfile"
       - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
       - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:$REVISION_ID"
