Use local build script to trigger a build
While this requires less steps to triger a build,
the main reason this script exists is that I could
not find a way to label the image with the git commit hash
of docker-stellar-core, and NOT this repo's git commit

--- a/cloudbuild/prod.yml
+++ b/cloudbuild/prod.yml
@@ -1,21 +1,14 @@
 steps:
-  - name: 'gcr.io/cloud-builders/git'
-    args:
-      - "submodule"
-      - "update"
-      - "--init"
-      - "--remote"
   - name: 'gcr.io/cloud-builders/docker'
     args: ["pull", "us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"]
   - name: 'gcr.io/cloud-builders/docker'
-    dir: "docker-stellar-core"
     args:
       - "build"
       - "--cache-from=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
-      - "--file=docker-stellar-core/Dockerfile"
+      - "--file=Dockerfile"
       - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:prod-latest"
-      - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:$REVISION_ID"
-      - "docker-stellar-core"
+      - "--tag=us.gcr.io/$PROJECT_ID/stellar-core:$_COMMIT_HASH"
+      - "."
 images:
   - 'us.gcr.io/$PROJECT_ID/stellar-core'
 timeout: 3600s
